--- a/docs/03.config-directives.md
+++ b/docs/03.config-directives.md
@@ -2,7 +2,7 @@
 
 ## ActionNamespace
 
-This is the summary
+Class ActionNamespace
 
 
 **KEY:** router.action-namespace **TYPE:** Multi Scalar  
@@ -20,7 +20,7 @@ This is just the continuation maybe I Lorem Ipsum Dolores Esta may Andrian mateo
 ```
 ## OneComplex
 
-This is the summary
+Class ServiceDefinition
 
 
 **KEY:** services **TYPE:** Complex  
@@ -30,14 +30,14 @@ This is just the continuation maybe I Lorem Ipsum Dolores Esta may Andrian mateo
 
 Property | Type | Example value | Summary | Description
 --- | --- | --- | --- | ---
-class|string|Fully\\Qualified\\Class\\Name|Service class name|Define here the FQCN of the service.
+class|string|Fully\Qualified\Class\Name|Service class name|Define here the FQCN of the service.
 params|array|['first parameter', 'second parameter')]|Constructor parameters|Array of parameters to pass to class constructor
 setters|hash||Setters to call on service once instantiated|Array of key/value pairs with keys being setter method names and values being parameters to pass to setter methods.
 
 ```json  
 {
     "services": {
-        "class": "Fully\\\\Qualified\\\\Class\\\\Name",
+        "class": "Fully\\Qualified\\Class\\Name",
         "params": "['first parameter', 'second parameter')]",
         "setters": ""
     }
@@ -45,12 +45,12 @@ setters|hash||Setters to call on service once instantiated|Array of key/value pa
 ```
 ## PhtmlDefaultLayout
 
-Summary
+Class PhtmlLayoutDefault
 
 
 **KEY:** phtml.layout.default **TYPE:** Scalar  
 
-& the description
+
 
 
 ```json  
@@ -60,7 +60,7 @@ Summary
 ```
 ## PhtmlLayoutPath
 
-Summary
+Class PhtmlLayoutPath
 
 
 **KEY:** phtml.layout.path **TYPE:** Multi Scalar  
@@ -77,7 +77,7 @@ Description maybe long
 ```
 ## ServiceDefinition
 
-This is the summary
+Class ServiceDefinition
 
 
 **KEY:** services **TYPE:** Multi Complex  
@@ -87,29 +87,33 @@ This is just the continuation maybe I Lorem Ipsum Dolores Esta may Andrian mateo
 
 Property | Type | Example value | Summary | Description
 --- | --- | --- | --- | ---
-class|string|Fully\\Qualified\\Class\\Name|Service class name|Define here the FQCN of the service.
+class|string|Fully\Qualified\Class\Name|Service class name|Define here the FQCN of the service.
 params|array|array('first parameter', 'second parameter')|Constructor parameters|Array of parameters to pass to class constructor
 setters|hash||Setters to call on service once instantiated|Array of key/value pairs with keys being setter method names and values being parameters to pass to setter methods.
+static|bool|true|Boolean for if it's static|
+aliases|string[]|['alias1' , 'alias2']|Array of aliasses|
 
 ```json  
 {
     "services": {
         "service.id": {
-            "class": "Fully\\\\Qualified\\\\Class\\\\Name",
+            "class": "Fully\\Qualified\\Class\\Name",
             "params": "array('first parameter', 'second parameter')",
-            "setters": ""
+            "setters": "",
+            "static": "true",
+            "aliases": "['alias1' , 'alias2']"
         }
     }
 }
 ```
 ## UrlAlias
 
-This file is part of the Objective PHP project
+
 
 
 **KEY:** router.url-alias **TYPE:** Multi Scalar  
 
-More info about Objective PHP on www.objective-php.org
+
 
 
 ```json  
